--- a/sass/site2.scss
+++ b/sass/site2.scss
@@ -10,6 +10,7 @@
 
 * {
   @include box-sizing(border-box);
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 h2:target, h3:target, h4:target, h5:target {
@@ -399,8 +400,8 @@ footer {
 #sidebar {
   $leftPadding: 16px;
 
-  docs-menu {
-    padding: 0 $leftPadding;
+  #sidebar-content {
+    height: 100%;
   }
 
   #logo-container {
